--- a/webpack/index.html
+++ b/webpack/index.html
@@ -10,8 +10,7 @@
     <input type="text" id="text1" value="2"/>
     <input type="text" id="text2" value="4"/>
     <span id="sum"></span>
-    <button id="myButton" type="button" onclick="updateSum()">Sum</button>
+    <button id="myButton" type="button" >Sum</button>
 </body>
-<script src="app.js" type="text/javascript"></script>
-<script src="math.js" type="text/javascript"></script>
+<script src="lib/require.js" data-main="app.js" type="text/javascript"></script>
 </html>
