--- a/webpack/index.html
+++ b/webpack/index.html
@@ -12,5 +12,5 @@
     <span id="sum"></span>
     <button id="myButton" type="button" >Sum</button>
 </body>
-<script src="lib/require.js" data-main="app.js" type="text/javascript"></script>
+<script src="bundle.js"  type="text/javascript"></script>
 </html>
